--- a/src/scss/pages/product.scss
+++ b/src/scss/pages/product.scss
@@ -15,9 +15,9 @@
       display: grid;
       gap: 20px;
       grid-template-columns: 1fr;
-      grid-template-rows: repeat(3, 470px);
+      grid-auto-rows: minmax(auto, 470px);
       @media (max-width: 992px) {
-         grid-template-rows: repeat(3, 1fr);
+         grid-auto-rows: minmax(auto, 370px);
       }
       @media (max-width: 767px) {
          display: none;
@@ -34,7 +34,6 @@
    &__image {
       width: 100%;
       height: 100%;
-      aspect-ratio: 1;
       @media (max-width: 767px) {
          flex: none;
       }
